; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/ibm/extr_ibmvnic.c_ibmvnic_get_sset_count.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/ibm/extr_ibmvnic.c_ibmvnic_get_sset_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ibmvnic_adapter = type { i32, i32 }

@ibmvnic_stats = common dso_local global i32 0, align 4
@NUM_TX_STATS = common dso_local global i32 0, align 4
@NUM_RX_STATS = common dso_local global i32 0, align 4
@ibmvnic_priv_flags = common dso_local global i32 0, align 4
@EOPNOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i32)* @ibmvnic_get_sset_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ibmvnic_get_sset_count(%struct.net_device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ibmvnic_adapter*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.net_device*, %struct.net_device** %4, align 8
  %8 = call %struct.ibmvnic_adapter* @netdev_priv(%struct.net_device* %7)
  store %struct.ibmvnic_adapter* %8, %struct.ibmvnic_adapter** %6, align 8
  %9 = load i32, i32* %5, align 4
  switch i32 %9, label %28 [
    i32 128, label %10
    i32 129, label %25
  ]

10:                                               ; preds = %2
  %11 = load i32, i32* @ibmvnic_stats, align 4
  %12 = call i32 @ARRAY_SIZE(i32 %11)
  %13 = load %struct.ibmvnic_adapter*, %struct.ibmvnic_adapter** %6, align 8
  %14 = getelementptr inbounds %struct.ibmvnic_adapter, %struct.ibmvnic_adapter* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @NUM_TX_STATS, align 4
  %17 = mul nsw i32 %15, %16
  %18 = add nsw i32 %12, %17
  %19 = load %struct.ibmvnic_adapter*, %struct.ibmvnic_adapter** %6, align 8
  %20 = getelementptr inbounds %struct.ibmvnic_adapter, %struct.ibmvnic_adapter* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @NUM_RX_STATS, align 4
  %23 = mul nsw i32 %21, %22
  %24 = add nsw i32 %18, %23
  store i32 %24, i32* %3, align 4
  br label %31

25:                                               ; preds = %2
  %26 = load i32, i32* @ibmvnic_priv_flags, align 4
  %27 = call i32 @ARRAY_SIZE(i32 %26)
  store i32 %27, i32* %3, align 4
  br label %31

28:                                               ; preds = %2
  %29 = load i32, i32* @EOPNOTSUPP, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %3, align 4
  br label %31

31:                                               ; preds = %28, %25, %10
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local %struct.ibmvnic_adapter* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
